Add turborepo tooling

--- a/package.json
+++ b/package.json
@@ -7,5 +7,15 @@
     "apps/*",
     "configs/*",
     "packages/*"
-  ]
+  ],
+  "scripts": {
+    "dev": "turbo run dev",
+    "build": "turbo run build",
+    "start": "turbo run start",
+    "test": "turbo run test",
+    "lint": "turbo run lint"
+  },
+  "devDependencies": {
+    "turbo": "^1.6.1"
+  }
 }
