--- a/apps/mobile-rn/package.json
+++ b/apps/mobile-rn/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@ex-turborepo-demo/utils": "workspace:^",
     "react": "18.1.0",
     "react-native": "0.70.3"
   },
@@ -30,7 +31,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.3"
+    "typescript": "4.8.4"
   },
   "jest": {
     "preset": "react-native",
