--- a/apps/web-next/package.json
+++ b/apps/web-next/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ex-turborepo-demo/utils": "workspace:^",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
