--- a/apps/web-next/package.json
+++ b/apps/web-next/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.0.7",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "next-transpile-modules": "^9.1.0",
     "typescript": "4.8.4"
   }
 }
