--- a/example/dep-1/package.json
+++ b/example/dep-1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ex-turborepo-demo/dep-1",
+  "name": "@ex-yarn-turborepo-demo/dep-1",
   "version": "0.0.0",
   "private": true,
   "main": "./index.ts",
@@ -7,7 +7,7 @@
     "build": "echo 'building dep-1'"
   },
   "dependencies": {
-    "@ex-turborepo-demo/dep-2": "workspace:^"
+    "@ex-yarn-turborepo-demo/dep-2": "workspace:*"
   },
   "devDependencies": {
     "typescript": "4.8.4"
